# rahul-agent-service

./: .env.example  .gitignore  API.md  Makefile  README.md  docker-compose.development.yml  example.html  main.py  ocr_cache.json  pyproject.toml  yoyo.ini
.github/workflows/: ai-services-AutoDeployTrigger-e363c724-428e-4ffd-9030-5eb9bb09853d.yml
database_session/: .sqlite  InquiryStatus.sqlite  default_session.sqlite  purchase_jk_details_query.sqlite  test_query.sqlite
email-service/: .gitignore  index.js  package-lock.json  package.json  test_email_service.js
email-service/config/: config.js
email-service/migrations/: 20251128000001-create-emails-table.js  20251128000002-create-email-webhooks-table.js
migrations/: 20260210_01_k5Yuv-conversations.py  20260210_02_Xa9eZ-messagesmessages.py  20260213_01_analysis_tables.py  20260305_01_K1TNj-ocr-queue.py  20260312_01_add_metadata_to_conversations.py
src/api/: __init__.py  conversations.py  document_processor.py  email.py  health.py  messages.py  performance.py  so_validator.py  whatsapp.py
src/db_info/: database.txt  purchase.txt  users.txt
src/events/: __init__.py
src/middlewares/: logger.py  upload_middleware.py
src/models/: __init__.py  api_output.py  conversations.py  messages.py
src/services/: conversation_service.py  email_service.py  message_service.py  ocr_service.py  performance_service.py  so_validation.py  whatsapp_service.py
src/sse/: router.py
src/utils/: __init__.py  database.py  (+4 more)
whatsapp-service/: Dockerfile  app.js  docker-compose.yml  migrate.js  package-lock.json  package.json
(+49 files in other folders)
